@@ -49,7 +49,7 @@
 \C"It's not our fault, the data files
 \Care telling us what to do!"
 \L- Dancer, 
-\Lexplaining things clearly.
+\C(explaining things clearly)
 
 \C"If we stack kids, 
 \Cwe should use a proper stack!"
@@ -71,4 +71,4 @@
 
 \C"BTW I don't stack kids anymore,
 \CI now put them into a queue."
-\L- Max on #exult
+\L- Max on ##exult
